Minor tag change

--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -28,11 +28,11 @@ block content
         div.item-details
           div.item-data
             h1 #{item.name}
-            p #{item.description}
+            h2 #{item.description}
           div.item-status
             div.item-price
               h2 Price:
               h2 #{item.check_price}
             div.item-stock
-              h3 Stock:
-              h3 #{item.check_stock}
+              h2 Stock:
+              h2 #{item.check_stock}
