--- a/views/item_details.pug
+++ b/views/item_details.pug
@@ -11,14 +11,14 @@ block content
       div.item-details
         div.item-data
           h1 #{item.name}
-          p #{item.description}
+          h2 #{item.description}
         div.item-status
           div.item-price
             h2 Price:
             h2 #{item.check_price}
           div.item-stock
-            h3 Stock:
-            h3 #{item.check_stock}
+            h2 Stock:
+            h2 #{item.check_stock}
         div.item-controls
           a.btn-control(href=`.${item.url}/update`) Update item
           a.btn-control.btn-danger(href=`.${item.url}/image-delete`) Delete image
