--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 :root {
 	--custom-black: rgb(50, 50, 50);
+	--custom-gray: rgb(215, 215, 215);
 	--custom-white: rgb(255, 255, 255);
 	--custom-blue: rgb(100, 250, 250);
 	--custom-orange: rgb(255, 125, 25);
@@ -227,7 +228,6 @@ main {
 	flex: 1;
 	margin: 24px;
 	min-width: fit-content;
-	background-color: var(--custom-white);
 }
 
 .container-home {
@@ -239,14 +239,10 @@ main {
 	max-height: 100%;
 	position: relative;
 	margin: 0 auto;
-}
-
-.home-bg-pic {
-	min-width: 480px;
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 100%;
+	background-image: url('/pictures/home_picture_f1_2022_car.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 }
 
 .container-home .home-grid {
@@ -265,7 +261,7 @@ main {
 	flex-direction: column;
 	word-break: keep-all;
 	margin: auto;
-	filter: opacity(90%);
+	filter: opacity(95%);
 	padding: 4px;
 }
 
@@ -338,6 +334,14 @@ main {
 	padding: 8px;
 }
 
+.grid-container .item .item-data h2 {
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .item .item-img {
 	height: 128px;
 	width: 128px;
@@ -378,13 +382,16 @@ main {
 	margin: 0 8px;
 }
 
+.item-data {
+	flex: 2;
+}
+
 .item-data h1 {
 	padding-bottom: 8px;
 }
 
 .item-data h2 {
 	text-overflow: ellipsis;
-	overflow: auto;
 	scrollbar-color: var(--custom-red) transparent;
 	padding-top: 8px;
 }
@@ -401,6 +408,7 @@ main {
 
 .item-status {
 	display: flex;
+	flex: 1;
 	flex-direction: row;
 	justify-content: space-between;
 	font-weight: 600;
@@ -525,6 +533,12 @@ main {
 	text-align: center;
 }
 
+.category-form input,
+.item-form input {
+	border: 1px solid var(--custom-black);
+	background-color: var(--custom-white);
+}
+
 .category-form button,
 .item-form button {
 	margin: 12px auto;
@@ -558,6 +572,8 @@ textarea {
 select {
 	padding: 4px;
 	text-align: center;
+	border: 1px solid var(--custom-black);
+	background-color: var(--custom-gray);
 }
 
 .form-controls {
@@ -650,8 +666,6 @@ select {
 .item-form input[type='file'] {
 	padding: 8px 0;
 	text-align: center;
-	border: 1px solid rgb(150, 150, 150);
-	background-color: rgb(255, 255, 255);
 }
 
 .container .category-delete {
