Renaming some classes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,10 +7,10 @@ html
   body
     nav
       div.nav-top
-        ul.category-list
+        ul.nav-links
           li
             a(href='/') Home
-          li.dropdown-hover
+          li.category-list-hover
             a(href='/catalog') Catalog
             if nav_category_list
               ul.dropdown
