--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,13 +7,17 @@
 	--custom-red: rgb(200, 30, 30);
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	font-family: 'Lucida Grande', Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	overflow-x: hidden;
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh;
+	height: 100%;
 }
 
 * {
@@ -65,7 +69,6 @@ nav * {
 .nav-links {
 	display: flex;
 	flex-direction: row;
-	flex: 1;
 	align-items: flex-end;
 	font-size: 1.5rem;
 	font-weight: 600;
@@ -79,7 +82,6 @@ nav * {
 }
 
 .nav-links > li > a {
-	position: relative;
 	padding-bottom: 16px;
 }
 
@@ -87,28 +89,14 @@ nav * {
 	text-align: center;
 	font-size: 3rem;
 	font-weight: 600;
-	flex: 1;
-	text-align: center;
 	text-transform: uppercase;
 	font-style: italic;
 	white-space: nowrap;
-	-webkit-text-stroke-color: rgb(0, 0, 0);
-	-webkit-text-stroke-width: 2px;
 	padding: 12px;
-	font-family: sans-serif;
-	background-color: rgb(255, 255, 255);
-	background-image: linear-gradient(45deg, rgb(0, 0, 0) 25%, transparent 25%),
-		linear-gradient(-45deg, rgb(0, 0, 0) 25%, transparent 25%),
-		linear-gradient(45deg, transparent 75%, rgb(0, 0, 0) 75%),
-		linear-gradient(-45deg, transparent 75%, rgb(0, 0, 0) 75%);
-	background-size: 30px 30px;
-	background-position: 0 0, 0 15px, 15px -15px, -15px 0px;
 }
 
 .nav-top .logo a::after {
 	content: 'Formula 1 Store';
-	color: var(--custom-red);
-	filter: brightness(120%);
 }
 
 @media only screen and (max-width: 992px) {
@@ -248,8 +236,7 @@ nav * {
 
 main {
 	flex: 1;
-	margin: 24px;
-	min-width: fit-content;
+	height: fit-content;
 }
 
 .container-home {
@@ -257,14 +244,12 @@ main {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	max-width: 100%;
-	max-height: 100%;
-	position: relative;
-	margin: 0 auto;
-	background-image: url('/pictures/home_picture_f1_2022_car.png');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	height: 100%;
+	background: repeating-conic-gradient(
+			var(--custom-black) 0% 25%,
+			transparent 0% 50%
+		)
+		50% / 100px 100px;
 }
 
 .container-home .home-grid {
@@ -283,7 +268,7 @@ main {
 	flex-direction: column;
 	word-break: keep-all;
 	margin: auto;
-	opacity: 0.9;
+	opacity: 0.95;
 	padding: 4px;
 	background: linear-gradient(var(--custom-blue), var(--custom-orange));
 	transition: 0.1s ease-in-out;
@@ -320,6 +305,7 @@ main {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	margin: 24px;
 }
 
 .grid-container .item:hover:not(.item-add, .category-controls) {
@@ -328,6 +314,7 @@ main {
 
 .grid-container {
 	display: grid;
+	margin: 24px;
 	grid-template-columns: repeat(auto-fill, 400px);
 	grid-auto-rows: 1fr;
 	justify-content: space-evenly;
@@ -539,6 +526,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin: 24px;
 }
 
 .container-form h1 {
